--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=projeto_DB_droid
+spring.data.mongodb.database=projeto_final
 
 
 
